# RAG-app

./: README.md  main.py  pyproject.toml  usage.py
data/: hr_policy.txt  onboarding_support.txt  product_faq.txt
src/: api.py  llm.py  rag.py
